[package]
name = "dvm"
version = "1.8.6"
license = "MIT"
authors = ["迷渡 <justjavac@gmail.com>", "CGQAQ <m.jason.liu@outlook.com>"]
edition = "2021"
description = "Deno Version Manager - Easy way to manage multiple active deno versions."
repository = "https://github.com/justjavac/dvm"
default-run = "dvm"
keywords = ["deno", "version", "dvm", "utils"]
categories = ["hardware-support"]
documentation = "https://docs.rs/dvm"
readme = "README.md"

[[bin]]
name = "dvm"
path = "src/main.rs"

[dependencies]
cfg-if = "1.0.0"

anyhow = "1.0.58"
clap = "4.0.18"
clap_derive = "4.0.18"
clap_complete = "4.0.3"
semver = "1.0.12"
tempfile = "3.3.0"
tinyget = { version = "1.0.1", features = ["https"] }
json_minimal = "0.1.3"
asserts-rs = "0.3.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
dirs = "4.0.0"
phf = { version = "0.11.0", features = ["macros"] }
colored = "2.0.0"
native-tls = { version = "0.2.10", features = ["vendored"] }
set_env = "1.3.4"
which = "4.2.5"

[target.'cfg(windows)'.dependencies]
output_vt100 = "0.1.3"
ctor = "0.1.22"
winapi = { version = "0.3.9", features = ["winnls"] }

[package.metadata.winres]
# This section defines the metadata that appears in the dvm.exe PE header.
OriginalFilename = "dvm.exe"
LegalCopyright = "© Dvm contributors. MIT licensed."
ProductName = "Dvm"
FileDescription = "Deno Version Manager - Easy way to manage multiple active deno versions."

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z' # Optimize for size
panic = "abort"
strip = "symbols"
