[package]
name = "dvm"
version = "1.8.6"
license = "MIT"
authors = ["迷渡 <justjavac@gmail.com>", "CGQAQ <m.jason.liu@outlook.com>"]
edition = "2021"
description = "Deno Version Manager - Easy way to manage multiple active deno versions."
repository = "https://github.com/justjavac/dvm"
default-run = "dvm"
keywords = ["deno", "version", "dvm", "utils"]
categories = ["hardware-support"]
documentation = "https://docs.rs/dvm"
readme = "README.md"

[[bin]]
name = "dvm"
path = "src/main.rs"

[dependencies]
cfg-if = "1.0.0"

anyhow = "1.0.75"
clap = "4.4.7"
clap_derive = "4.4.7"
clap_complete = "4.4.4"
semver = "1.0.20"
tempfile = "3.8.1"
tinyget = { version = "1.0.1", features = ["https"] }
json_minimal = "0.1.3"
asserts-rs = "0.3.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
dirs = "5.0.1"
phf = { version = "0.11.2", features = ["macros"] }
colored = "2.0.4"
native-tls = { version = "0.2.11", features = ["vendored"] }
set_env = "1.3.4"
which = "5.0.0"

# for user experience
indicatif = "0.17.7"

[target.'cfg(windows)'.dependencies]
output_vt100 = "0.1.3"
ctor = "0.2.5"
winapi = { version = "0.3.9", features = ["winnls"] }

[package.metadata.winres]
# This section defines the metadata that appears in the dvm.exe PE header.
OriginalFilename = "dvm.exe"
LegalCopyright = "© Dvm contributors. MIT licensed."
ProductName = "Dvm"
FileDescription = "Deno Version Manager - Easy way to manage multiple active deno versions."

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z' # Optimize for size
panic = "abort"
# strip = "symbols"
