[package]
name = "dvm"
version = "1.8.7"
license = "MIT"
authors = ["迷渡 <justjavac@gmail.com>", "CGQAQ <m.jason.liu@outlook.com>"]
edition = "2021"
description = "Deno Version Manager - Easy way to manage multiple active deno versions."
repository = "https://github.com/justjavac/dvm"
default-run = "dvm"
keywords = ["deno", "version", "dvm", "utils"]
categories = ["hardware-support"]
documentation = "https://docs.rs/dvm"
readme = "README.md"

[[bin]]
name = "dvm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
asserts-rs = "0.3.0"
cfg-if = "1.0.0"
clap = "4.4.10"
clap_derive = "4.4.7"
clap_complete = "4.4.4"
colored = "2.0.4"
dirs = "5.0.1"
indicatif = "0.17.7"
json_minimal = "0.1.3"
native-tls = { version = "0.2.11", features = ["vendored"] }
phf = { version = "0.11.2", features = ["macros"] }
semver = "1.0.20"
serde = { version = "1.0.19", features = ["derive"] }
serde_json = "1.0.108"
set_env = "1.3.4"
tempfile = "3.8.1"
tinyget = { version = "1.0.1", features = ["https"] }
which = "5.0.0"

[target.'cfg(windows)'.dependencies]
ctor = "0.2.5"
output_vt100 = "0.1.3"
winapi = { version = "0.3.9", features = ["winnls"] }

[package.metadata.winres]
# This section defines the metadata that appears in the dvm.exe PE header.
OriginalFilename = "dvm.exe"
LegalCopyright = "© Dvm contributors. MIT licensed."
ProductName = "Dvm"
FileDescription = "Deno Version Manager - Easy way to manage multiple active deno versions."

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z' # Optimize for size
panic = "abort"
# strip = "symbols"
